# A-Cross-Regional-Multi-Robot-Collaboration-Framework-based-on-KubeEdge

./: README.md
Environment Perception/: README.md  light.py  smoke.py  voice.py
Navigation/catkin_workspace/src/: README.md.docx
Navigation/catkin_workspace/src/autolabor_pro1_driver/launch/: driver.launch  open_driver.launch
Navigation/catkin_workspace/src/autolabor_pro1_driver/src/: 1.cpp  autolabor_driver.cpp
Navigation/catkin_workspace/src/launch/robot_navigation/: 111.py  CMakeLists.txt  listener.py  listener1.py  listener2.py  teb_local_planner_params.yaml
Navigation/catkin_workspace/src/launch/robot_navigation/4wd/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
Navigation/catkin_workspace/src/launch/robot_navigation/cfg/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
Navigation/catkin_workspace/src/launch/robot_navigation/demo/: 11.py
Navigation/catkin_workspace/src/launch/robot_navigation/launch/: 1.launch  pro_move_bash.launch  robot_navigation.launch  sim_robot_navigation.launch
Navigation/catkin_workspace/src/launch/robot_navigation/param/: global_costmap_params.yaml  local_costmap_params.yaml  (+1 more)
Navigation/catkin_workspace/src/mapper_sub/: CMakeLists.txt  package.xml
Navigation/catkin_workspace/src/mapper_sub/lib/: libpaho-mqtt3a.so.1  libpaho-mqtt3as.so.1  libpaho-mqtt3c.so.1
Navigation/catkin_workspace/src/mapper_sub/scripts/: pub.py
Navigation/catkin_workspace/src/maps/: out10.pgm  out10.yaml
(+4 files in other folders)
